--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p>Open Database</p>
     <div id="qrpopup" > //The hidden div tag for implementing the popup
             <hr/>
+            <div id="editId"></div>
             <input type="text" id="editNameBox"><br>
             <input type="text" id="editNumberBox"><br>
             <button onclick="goDelete()">Delete</button>
