--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title></title>
 </head>
  <body>
-    <h1>My first App</h1>
+    <h1>Potrošnja vode</h1>
     <p>Open Database</p>
     <div id="qrpopup" > //The hidden div tag for implementing the popup
             <hr/>
-            <div id="editId"></div>
+            <div id="editId">ddd</div>
             <input type="text" id="editNameBox"><br>
             <input type="text" id="editNumberBox"><br>
             <button onclick="goDelete()">Delete</button>
